frontend/test/should_pass/defYield_003x.grg
using defYield;

rule t
{
	pp:p(--- yield x);
---
	def x:B;
	
	modify {
		pp(--- yield y);
	---
		def y:Node;
	}
}

pattern p(--- def x:B) modify(--- def z:Node)
{
	y:B;
---
	yield { yield x = y; }
	
	modify {
		u:Node;
	---
		eval { yield z = u; }
	}
}

