frontend/test/should_fail/basic_060.grg
using basic_model_002;

rule r {
	x : A;
	y : B;
	z : C;

	replace {
		eval {
			x.ia = 42;
		}
	}
}

